# using_image_pipeline

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
launch/: convex_hull.launch  jsk_pcl_ros.launch  nodelet.launch  plane_segmentation.launch  point_cloud.launch  sample.launch  transform_cloud.launch
src/: image_shrinker.cpp  pcl_segmentation_node.cpp
src/nodelets/: pcl_segmentation.cpp  sample.cpp  transform_cloud.cpp
